--- a/lib/web/templates/admin/crashes.html.heex
+++ b/lib/web/templates/admin/crashes.html.heex
@@ -1,19 +1,19 @@
-<nav><div class=wrapper>
-  <a href="<%= admin_path(@conn, :index) %>">
+<nav><div class="wrapper">
+  <a href="{@admin_path(@conn, :index)}">
     Administration
   </a>
   ›
   <h1>Crashes in last <%= @days %> days</h1>
 </div></nav>
 
-<main role=main><div class=wrapper>
+<main role="main"><div class="wrapper">
 
-<table class=table>
+<table class="table">
   <tbody>
   <%= for crash <- @crashes do %>
     <tr role="row">
       <td class="fill-link">
-        <a href="<%= project_path(@conn, :show, crash.project.id) %>">
+        <a href="{project_path(@conn, :show, crash.project.id)}">
           <%= crash.project.name %>
         </a>
       </td>
