--- a/lib/web/templates/admin/index.html.heex
+++ b/lib/web/templates/admin/index.html.heex
@@ -1,60 +1,60 @@
-<nav><div class=wrapper>
+<nav><div class="wrapper">
 <h1>Administration</h1>
 </div></nav>
 
-<main role=main><div class=wrapper>
+<main role="main"><div class="wrapper">
 
-<div class=toolbar>
+<div class="toolbar">
 <%= link "Sync installations", class: "toolbar-item", to: admin_path(@conn, :synchronize_all_installations), method: :post %>
 </div>
 
-<h2 class=header>Open any repository</h2>
+<h2 class="header">Open any repository</h2>
 <%= form_for @conn, admin_path(@conn, :project_by_name), [as: :project, method: :get], fn f -> %>
   <%= text_input f, :name, placeholder: "Repository name" %>
   <%= submit "Open" %>
 <% end %>
 
-<h2 class=header>Red flags</h2>
+<h2 class="header">Red flags</h2>
 
-<table class=table>
+<table class="table">
   <tbody>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= @orphan_count %>
       </td>
-      <td class=fill-link>
+      <td class="fill-link">
         <%= link "Orphaned repositories", to: admin_path(@conn, :orphans) %>
       </td>
     </tr>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= @dup_patches_count %>
       </td>
-      <td class=fill-link>
+      <td class="fill-link">
         <%= link "Duplicate patches in batches", to: admin_path(@conn, :dup_patches) %>
       </td>
     </tr>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= @crashes_day %>
       </td>
-      <td class=fill-link>
+      <td class="fill-link">
         <%= link "Worker crashes in last day", to: admin_path(@conn, :crashes, days: 1) %>
       </td>
     </tr>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= @crashes_week %>
       </td>
-      <td class=fill-link>
+      <td class="fill-link">
         <%= link "Worker crashes in last 7 days", to: admin_path(@conn, :crashes, days: 7) %>
       </td>
     </tr>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= @crashes_month %>
       </td>
-      <td class=fill-link>
+      <td class="fill-link">
         <%= link "Worker crashes in last 30 days", to: admin_path(@conn, :crashes, days: 30) %>
       </td>
     </tr>
