--- a/lib/web/templates/project/log.html.heex
+++ b/lib/web/templates/project/log.html.heex
@@ -1,22 +1,22 @@
 <nav>
 
-<div class=wrapper>
+<div class="wrapper">
   <h1>
-    <a href="<%= Confex.fetch_env!(:bors, :html_github_root) %>/<%= @project.name %>/">
+    <a href="{Confex.fetch_env!(:bors, :html_github_root)}/{@project.name}/">
       <%= @project.name %>
     </a>
   </h1>
 </div>
 
-<div class=tabs role=navigation>
+<div class="tabs" role="navigation">
   <%= link "Pull requests", to: project_path(@conn, :show, @project), class: "tab" %>
-  <span class="tab tab--active" aria-selected=true>History</span>
+  <span class="tab tab--active" aria-selected="true">History</span>
   <%= link "Settings", to: project_path(@conn, :settings, @project), class: "tab" %>
 </div>
 
 </nav>
 
-<main role=main><div class=wrapper>
+<main role="main"><div class="wrapper">
 
 <table id="log-table" class="table">
   <tbody>
