--- a/lib/web/templates/project/settings.html.heex
+++ b/lib/web/templates/project/settings.html.heex
@@ -1,31 +1,31 @@
 <nav>
 
-<div class=wrapper>
+<div class="wrapper">
   <h1>
-    <a href="<%= Confex.fetch_env!(:bors, :html_github_root) %>/<%= @project.name %>/">
+    <a href="{Confex.fetch_env!(:bors, :html_github_root)}/{@project.name}/">
       <%= @project.name %>
     </a>
   </h1>
 </div>
 
-<div class=tabs role=navigation>
+<div class="tabs" role="navigation">
   <%= link "Pull requests", to: project_path(@conn, :show, @project), class: "tab" %>
   <%= link "History", to: project_path(@conn, :log, @project), class: "tab" %>
-  <span class="tab tab--active" aria-selected=true>Settings</span>
+  <span class="tab tab--active" aria-selected="true">Settings</span>
 </div>
 
 </nav>
 
-<main role=main>
+<main role="main">
 
-<div class=wrapper><section class=split>
+<div class="wrapper"><section class="split">
 
-<section class=split-item>
-<h2 class=header>Reviewers</h2>
+<section class="split-item">
+<h2 class="header">Reviewers</h2>
 <p>permission to run any command, and to change repository settings</p>
 <%= form_for @update_reviewer_settings, project_path(@conn, :update_reviewer_settings, @project), [as: :project], fn f -> %>
-  <label for=project_auto_reviewer_required_perm>Synchronize</label>
-  <div class=toolbar>
+  <label for="project_auto_reviewer_required_perm">Synchronize</label>
+  <div class="toolbar">
     <%= select f, :auto_reviewer_required_perm, BorsNG.Database.ProjectPermission.select_list %>
     <%= submit "Update", class: "toolbar-item" %>
   </div>
@@ -33,7 +33,7 @@
 <table class="table">
   <tbody>
 <%= for reviewer <- @reviewers do %>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= reviewer.login %>
       </td>
@@ -49,7 +49,7 @@
     </tr>
 <% end %>
 <%= if !@project.auto_reviewer_required_perm do %>
-    <tr role=row>
+    <tr role="row">
       <%= form_for @conn, project_path(@conn, :add_reviewer, @project.id), [as: :reviewer], fn f -> %>
       <td>
         <%= text_input f, :login, placeholder: "GitHub login" %>
@@ -62,14 +62,14 @@
 <% end %>
   </tbody>
 </table>
-</section> <!-- class=split-item -->
+</section> <!-- class="split-item" -->
 
-<section class=split-item>
-<h2 class=header>Members</h2>
+<section class="split-item">
+<h2 class="header">Members</h2>
 <p>permission to run the <code>try</code> and <code>retry</code> commands</p>
 <%= form_for @update_member_settings, project_path(@conn, :update_member_settings, @project), [as: :project], fn f -> %>
-  <label for=project_auto_member_required_perm>Synchronize</label>
-  <div class=toolbar>
+  <label for="project_auto_member_required_perm">Synchronize</label>
+  <div class="toolbar">
     <%= select f, :auto_member_required_perm, BorsNG.Database.ProjectPermission.select_list %>
     <%= submit "Update", class: "toolbar-item" %>
   </div>
@@ -77,7 +77,7 @@
 <table class="table">
   <tbody>
 <%= for member <- @members do %>
-    <tr role=row>
+    <tr role="row">
       <td>
         <%= member.login %>
       </td>
@@ -91,7 +91,7 @@
     </tr>
 <% end %>
 <%= if !@project.auto_member_required_perm do %>
-    <tr role=row>
+    <tr role="row">
       <%= form_for @conn, project_path(@conn, :add_member, @project.id), [as: :member], fn f -> %>
       <td>
         <%= text_input f, :login, placeholder: "GitHub login" %>
@@ -104,32 +104,32 @@
 <% end %>
   </tbody>
 </table>
-</section> <!-- class=split-item -->
+</section> <!-- class="split-item" -->
 
-</section></div> <!-- class=split -->
+</section></div> <!-- class="split" -->
 
-<div class=wrapper><section class=split>
+<div class="wrapper"><section class="split">
 
-<section class=split-item>
-<h2 class=header>Branches</h2>
+<section class="split-item">
+<h2 class="header">Branches</h2>
 <%= form_for @update_branches, project_path(@conn, :update_branches, @project), [as: :project], fn f -> %>
-  <label for=staging_branch>staging</label>
+  <label for="staging_branch">staging</label>
   <%= text_input f, :staging_branch, id: "staging_branch" %>
-  <label for=trying_branch>trying</label>
+  <label for="trying_branch">trying</label>
   <%= text_input f, :trying_branch, id: "trying_branch" %>
-  <div class=toolbar><%= submit "Update", class: "toolbar-item" %></div>
+  <div class="toolbar"><%= submit "Update", class: "toolbar-item" %></div>
 <% end %>
-</section> <!-- class=split-item -->
+</section> <!-- class="split-item" -->
 
-<section class=split-item>
-<h2 class=header>Bors Badge</h2>
+<section class="split-item">
+<h2 class="header">Bors Badge</h2>
 <p>Put this badge in your README to show your love for Bors.</p>
-<p><a href="<%= project_url(@conn, :show, @project) %>"><img src="https://bors.tech/images/badge_small.svg" alt="Bors enabled"></a></p>
-<h3 class=header>HTML</h3>
+<p><a href="{project_url(@conn, :show, @project)}"><img src="https://bors.tech/images/badge_small.svg" alt="Bors enabled"></a></p>
+<h3 class="header">HTML</h3>
 <textarea rows="5" cols="50" onclick="this.focus();this.select()" readonly="readonly">
-<a href="<%= project_url(@conn, :show, @project) %>"><img src="https://bors.tech/images/badge_small.svg" alt="Bors enabled"></a>
+<a href="{project_url(@conn, :show, @project)}"><img src="https://bors.tech/images/badge_small.svg" alt="Bors enabled"></a>
 </textarea>
-<h3 class=header>Markdown</h3>
+<h3 class="header">Markdown</h3>
 <textarea rows="5" cols="50" onclick="this.focus();this.select()" readonly="readonly">
 [![Bors enabled](https://bors.tech/images/badge_small.svg)](<%= project_url(@conn, :show, @project) %>)
 </textarea>
